--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
             <div id="line"></div>
             <div class="after-line">
                 <div class="inside-div">
-                    <span class="pass" id="pass0">...</span>
-                    <span class="pass" id="pass1">...</span>
+                    <span class="pass" id="pass0" onclick="copy_password('pass0')">...</span>
+                    <span class="pass" id="pass1" onclick="copy_password('pass1')">...</span>
                 </div>
                 <div  class="inside-div">
-                    <span class="pass" id="pass2">...</span>
-                    <span class="pass" id="pass3">...</span>
+                    <span class="pass" id="pass2" onclick="copy_password('pass2')">...</span>
+                    <span class="pass" id="pass3" onclick="copy_password('pass3')">...</span>
                 </div>
             </div>
         </div>
